Added notifications Forma

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   --color-secondary-dark: #6d6b6b;     /* Color secundario oscuro */
   --color-border: #3C3C3C;             /* Color de borde más oscuro */
   --color-error: #FF4C4C;              /* Color de error (rojo suave) */
+  --color-success: #65d177;              /* Color de error (rojo suave) */
 }
 
 
