--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,22 @@ button:hover {
   font-weight: bold;
 }
 
+/* Estilos para el botón en una sola columna */
+button[type="submit"] {
+  grid-column: span 2; /* Hace que el botón ocupe ambas columnas */
+  padding: 10px;
+  background-color: var(--color-primary);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: var(--color-text);
+  color: var(--color-background);
+}
 
 /* Estilos para inputs */
 input {
@@ -95,15 +111,20 @@ label {
 /* Contenedor del formulario */
 .form-container {
   background-color: var(--color-primary-dark);
-  /* Fondo oscuro elegante */
   padding: 20px;
   border-radius: 10px;
-  max-width: 400px;
+  max-width: 600px;
   margin: 50px auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* Estilo general para los inputs */
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Dos columnas iguales */
+  gap: 20px; /* Espacio entre los campos */
+}
+
+/* Estilo general para los grupos de formulario */
 .form-group {
   margin-bottom: 20px;
 }
