--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -1,4 +1,3 @@
-
 .course-details-container {
     max-width: 800px;
     margin: 0 auto;
@@ -6,24 +5,41 @@
     background-color: var(--color-primary-dark);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .course-select {
     margin-bottom: 30px;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
 }
+
+
 
 .course-title {
     font-size: 1.5em;
     font-weight: bold;
     color: var(--color-text);
+    margin-bottom: 20px;
+}
+
+.section-headers-container {
+    display: flex;
+    gap: 10px; 
+    flex-wrap: wrap; /* Permite que los elementos bajen a una nueva línea si el espacio es limitado */
+    margin-top: 20px;
+    justify-content: center;
 }
 
 .section-header {
     cursor: pointer;
+    font-size: 1rem;
     font-weight: bold;
     padding: 10px;
     background-color: var(--color-primary);
     margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid var(--color-primary-contrast);
     transition: background-color 0.3s;
@@ -33,18 +49,23 @@
     background-color: var(--color-primary-contrast);
 }
 
+.section-header.active {
+    background-color: var(--color-text); /* Cambia a un color diferente cuando está activo */
+    color: var(--color-primary); /* Cambia el color del texto para mayor contraste */
+}
+
 .section-content {
-    padding: 10px 20px;
+    padding: 15px 20px;
     background-color: var(--color-primary);
     border-radius: 5px;
     margin-top: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .field-row {
     display: flex;
     justify-content: space-between;
-    padding: 5px 0;
+    padding: 8px 0;
     border-bottom: 1px solid var(--color-primary-contrast);
 }
 
@@ -59,4 +80,33 @@
     flex: 2;
     text-align: right;
     color: var(--color-secondary);
+    overflow-wrap: break-word; /* Evita desbordamiento */
+}
+
+
+.update-button-course {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centra el ícono y el texto */
+    background-color: var(--color-text);
+    color: var(--color-primary);
+    font-weight: bold;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: fit-content; /* Hace que el ancho se ajuste al contenido */
+    margin: 10px auto; /* Centra el botón en el contenedor */
+}
+
+.update-button-course i {
+    margin-right: 6px;
+    font-size: 1.2em;
+}
+
+.update-button-course:hover {
+    background-color: var(--color-primary);
+    transform: scale(1.05);
 }
