--- a/src/pages/forms/Forms_page.css
+++ b/src/pages/forms/Forms_page.css
@@ -105,3 +105,34 @@
     width: 50%;
     align-self: center;
 }
+
+
+.form-page-buttons{
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    max-width: 800px;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.form-page-container h1{
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.form-page-toggle-button{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    margin-bottom: 2rem;
+}
+
+
+.form-page-toggle-button.active{
+    background-color: var(--color-primary-dark);
+    color: var(--color-text);
+    border: 1px solid var(--color-border);
+}
